--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,18 @@
 # production
 /build
 
+# requests
+/requests
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+react-app-env.d.ts
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.env
