--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "myapp",
+  "name": "spacetrader-dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@radix-ui/react-popover": "1.0.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +13,10 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "chartjs": "^0.3.24",
+    "eslint": "^5.6.0",
+    "lens-ui": "^5.0.5",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-scripts": "^2.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
