--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "chartjs": "^0.3.24",
-    "eslint": "^5.6.0",
     "lens-ui": "^5.0.5",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-scripts": "^2.1.3",
-    "typescript": "^4.9.5",
+    "spacetraders-sdk": "file:api/packages/spacetraders-sdk",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^5.0.4"
   }
 }
