--- a/package.json
+++ b/package.json
@@ -3,22 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@atlaskit/breadcrumbs": "^11.10.0",
+    "@atlaskit/button": "^16.7.0",
+    "@atlaskit/checkbox": "^12.6.0",
+    "@atlaskit/code": "^14.6.0",
+    "@atlaskit/css-reset": "^6.5.0",
+    "@atlaskit/dynamic-table": "^14.9.0",
+    "@atlaskit/icon": "^21.12.0",
+    "@atlaskit/modal-dialog": "^12.5.0",
+    "@atlaskit/page-header": "^10.4.0",
+    "@atlaskit/page-layout": "^1.6.0",
+    "@atlaskit/popup": "^1.6.0",
+    "@atlaskit/table-tree": "^9.4.0",
+    "@atlaskit/tokens": "^1.4.0",
     "@types/node": "^16.18.27",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
-    "bootstrap": "^5.2.3",
     "chartjs": "^0.3.24",
-    "lens-ui": "^5.0.5",
+    "paper": "^0.12.17",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-scripts": "^2.1.3",
-    "spacetraders-sdk": "file:api/packages/spacetraders-sdk",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "spacetraders-sdk": "file:api/packages/spacetraders-sdk"
+  },
+  "devDependencies": {
+    "@atlaskit/eslint-plugin-design-system": "^5.3.0",
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,8 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "typescript": "^5.0.4"
   }
 }
