Replace paperjs by excalibur

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^0.27.2",
     "chartjs": "^0.3.24",
-    "paper": "^0.12.17",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "excalibur": "^0.27.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
