--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/badge": "^15.1.2",
     "@atlaskit/breadcrumbs": "^11.10.0",
     "@atlaskit/button": "^16.7.0",
     "@atlaskit/checkbox": "^12.6.0",
     "@atlaskit/code": "^14.6.0",
     "@atlaskit/css-reset": "^6.5.0",
+    "@atlaskit/dropdown-menu": "^11.9.1",
     "@atlaskit/dynamic-table": "^14.9.0",
     "@atlaskit/icon": "^21.12.0",
     "@atlaskit/modal-dialog": "^12.5.0",
@@ -24,6 +26,7 @@
     "chartjs": "^0.3.24",
     "eslint-plugin-react-hooks": "^4.6.0",
     "excalibur": "^0.27.0",
+    "lokijs": "^1.5.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -33,6 +36,7 @@
   "devDependencies": {
     "@atlaskit/eslint-plugin-design-system": "^5.3.0",
     "@openapitools/openapi-generator-cli": "^2.6.0",
+    "@types/lokijs": "^1.5.8",
     "typescript": "^5.0.4"
   },
   "scripts": {
