--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@atlaskit/table-tree": "^9.4.0",
     "@atlaskit/toggle": "^12.6.0",
     "@atlaskit/tokens": "^1.4.0",
+    "@atlaskit/tooltip": "^17.8.2",
     "@types/node": "^16.18.27",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
