--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@atlaskit/page-header": "^10.4.0",
     "@atlaskit/page-layout": "^1.6.0",
     "@atlaskit/popup": "^1.6.0",
+    "@atlaskit/progress-bar": "^0.6.2",
     "@atlaskit/select": "^16.2.3",
     "@atlaskit/table-tree": "^9.4.0",
     "@atlaskit/toggle": "^12.6.0",
@@ -28,7 +29,7 @@
     "chartjs": "^0.3.24",
     "eslint-plugin-react-hooks": "^4.6.0",
     "excalibur": "^0.27.0",
-    "lokijs": "^1.5.12",
+    "pouchdb": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -39,6 +40,7 @@
     "@atlaskit/eslint-plugin-design-system": "^5.3.0",
     "@openapitools/openapi-generator-cli": "^2.6.0",
     "@types/lokijs": "^1.5.8",
+    "@types/pouchdb": "^6.4.0",
     "typescript": "^5.0.4"
   },
   "scripts": {
