--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^16.18.27",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "antd": "^5.5.1",
     "axios": "^0.27.2",
     "chartjs": "^0.3.24",
     "eslint-plugin-react-hooks": "^4.6.0",
