Add system view, better fleet integration

--- a/package.json
+++ b/package.json
@@ -3,27 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@atlaskit/badge": "^15.1.2",
-    "@atlaskit/breadcrumbs": "^11.10.0",
+    "@ant-design/icons": "^5.1.2",
     "@atlaskit/button": "^16.7.0",
-    "@atlaskit/checkbox": "^12.6.0",
     "@atlaskit/code": "^14.6.0",
-    "@atlaskit/css-reset": "^6.5.0",
-    "@atlaskit/dropdown-menu": "^11.9.1",
+    "@atlaskit/css-reset": "^6.5.2",
     "@atlaskit/dynamic-table": "^14.9.0",
     "@atlaskit/icon": "^21.12.0",
-    "@atlaskit/modal-dialog": "^12.5.0",
-    "@atlaskit/page-header": "^10.4.0",
-    "@atlaskit/page-layout": "^1.6.0",
     "@atlaskit/popup": "^1.6.0",
-    "@atlaskit/progress-bar": "^0.6.2",
-    "@atlaskit/select": "^16.2.3",
-    "@atlaskit/table-tree": "^9.4.0",
-    "@atlaskit/tag": "^11.5.2",
-    "@atlaskit/tag-group": "^10.2.2",
-    "@atlaskit/toggle": "^12.6.0",
-    "@atlaskit/tokens": "^1.4.0",
-    "@atlaskit/tooltip": "^17.8.2",
+    "@excaliburjs/dev-tools": "^0.27.1",
     "@types/node": "^16.18.27",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
