--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "chartjs": "^0.3.24",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eventemitter3": "^5.0.1",
     "excalibur": "^0.27.0",
     "pouchdb": "^8.0.1",
     "pouchdb-find": "^8.0.1",
