--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.4",
     "antd": "^5.5.1",
     "axios": "^0.27.2",
+    "axios-rate-limit": "^1.3.0",
     "chartjs": "^0.3.24",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eventemitter3": "^5.0.1",
