--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "^5.0.1",
-    "spacetraders-sdk": "file:api/packages/spacetraders-sdk"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@atlaskit/eslint-plugin-design-system": "^5.3.0",
